--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -20,21 +20,14 @@
 </head>
 
 <body>
-
-  <h1>This is inline SVG with &lt;use&gt; linking to an external resource. It works even in IE 9, 10, and 11 because of <a href="https://github.com/jonathantneal/svg4everybody">SVG for Everybody</a>.</h1>
-
-  <svg class="icon icon-1">
-    <use xlink:href="asset/rps.svg#svg-r0"></use>
-  </svg>
-  <svg class="icon icon-1">
-    <use xlink:href="asset/rps.svg#svg-p0"></use>
-  </svg>
-  <svg class="icon icon-1">
-    <use xlink:href="asset/rps.svg#svg-s0"></use>
-  </svg>
-  
-  <script src="js/svg4everybody.js"></script>
+    <script src="vendor/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="vendor/react.js"></script>
+    <script src="https://www.promisejs.org/polyfills/promise-6.0.0.min.js"></script>
+    <script src="js/preload2.js"></script>
+    <script src="js/bots/random.js"></script>
+</body>
+</html>
 
 
 
-<div id="haloword-lookup" class="ui-widget-content ui-draggable"><div id="haloword-title"><span id="haloword-word"></span><a herf="#" id="haloword-pron" class="haloword-button" title="åé³"></a><audio id="haloword-audio"></audio><div id="haloword-control-container"><a herf="#" id="haloword-add" class="haloword-button" title="å å¥åè¯è¡¨"></a><a herf="#" id="haloword-remove" class="haloword-button" title="ç§»åºåè¯è¡¨"></a><a href="#" id="haloword-open" class="haloword-button" title="æ¥çåè¯è¯¦ç»éä¹" target="_blank"></a><a herf="#" id="haloword-close" class="haloword-button" title="å³é­æ¥è¯¢çª"></a></div><br style="clear: both;"></div><div id="haloword-content"></div></div></body></html>
